major rewrite using CGI

--- a/docker/webcmd/vhost.conf
+++ b/docker/webcmd/vhost.conf
@@ -5,19 +5,14 @@ server {
     root /var/www;
 
     location / {
-      error_log off;
+      #error_log off;
       deny all;
     }
 
-    location /webcmd {
-      error_log /tmp/webcmd.log;
-      deny all;
-    }
-
-    location ~ \.pl$ {
+    location ~ logger\.pl$ {
       allow 31.209.59.5/32;
       allow 127.0.0.0/8;
-      allow 172.31.0.0/16;
+      allow 172.0.0.0/8;
       deny all;
       gzip off;
       fastcgi_param SERVER_NAME \$http_host;
@@ -25,5 +20,4 @@ server {
       fastcgi_pass unix:/var/run/fcgiwrap.socket;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
- 
 }
