--- a/docker/webcmd/vhost.conf
+++ b/docker/webcmd/vhost.conf
@@ -5,11 +5,12 @@ server {
     root /var/www;
 
     location / {
-      #error_log off;
+      error_log off;
       deny all;
     }
 
-    location ~ logger\.pl$ {
+    #location ~ logger\.pl$ {
+    location ~ logger.pl {
       allow 31.209.59.5/32;
       allow 127.0.0.0/8;
       allow 172.0.0.0/8;
