--- a/docker/webcmd/vhost.conf
+++ b/docker/webcmd/vhost.conf
@@ -1,19 +1,44 @@
 server {
    
-    listen 80;
+    listen 443 ssl;
+    server_name         webcmd.local;
+    ssl_certificate     /etc/nginx/webcmd.crt;
+    ssl_certificate_key /etc/nginx/webcmd.key;
+    #listen 80;
     index index.php index.html;
     root /var/www;
 
+    error_page 403 /custom_403.html;
+    location = /custom_403.html {
+       root /var/www;
+       internal;
+    }
+
     location / {
+      server_tokens off;
       error_log off;
       deny all;
     }
 
-    #location ~ logger\.pl$ {
-    location ~ logger.pl {
+    location /lister.pl {
       allow 31.209.59.5/32;
-      allow 127.0.0.0/8;
-      allow 172.0.0.0/8;
+      deny all;
+      gzip off;
+      fastcgi_param SERVER_NAME \$http_host;
+      include /etc/nginx/fastcgi_params;
+      fastcgi_pass unix:/var/run/fcgiwrap.socket;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+    location /logger.pl {
+      allow all;
+      gzip off;
+      fastcgi_param SERVER_NAME \$http_host;
+      include /etc/nginx/fastcgi_params;
+      fastcgi_pass unix:/var/run/fcgiwrap.socket;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+    location /digest.pl {
+      allow 31.209.59.5/32;
       deny all;
       gzip off;
       fastcgi_param SERVER_NAME \$http_host;
